samples/_failures_safe/1761600106_bd6bb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89ac4e0b.c: In function ‘main’:
./samples/SAFE/__tmp_89ac4e0b.c:140:12: error: missing terminating " character
  140 |     printf("\nFiltered entries for
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89ac4e0b.c:140:5: error: expected expression at end of input
  140 |     printf("\nFiltered entries for
      |     ^~~~~~
./samples/SAFE/__tmp_89ac4e0b.c:140:5: error: expected declaration or statement at end of input
